welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: value &&! is not a member of Boolean
while (estFaceMur&&!estSurBiscuit){
                 ^